Adjust OffscreenCanvas throttling to allow two frames of backlog

The throttling fix landed in https://codereview.chromium.org/2817603004/
has severely impacted rendering throughput due to the delay in
compositor round trips.  To avoid blocking the renderer script's
animation loop, we need to allow the rendering proceed when there
is still a pending frame.

BUG=716138

Review-Url: https://codereview.chromium.org/2848553003
Cr-Commit-Position: refs/heads/master@{#468021}

Former-commit-id: fa845ac545a12d519ab5cb7d7ba5d9fd57ae2a0c